CSS: tried to fix white space display in <code> blocks.

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -138,6 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 
 code {
 	line-height: 18px;
+	white-space: pre;
 }
 
 .inlinepage h1 {
